--- a/REACT/public/netlify.toml
+++ b/REACT/public/netlify.toml
@@ -2,3 +2,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build]
+base = "./REACT"
+command = "npm run build"
+publish = "./REACT/build"
