Autenticação\n Renderização condicional e redirecionamento de rotas\n Configurações de Login \n Contextos funcionais e lidando com a resposta da API essencial pro front e verificações

--- a/API/.env
+++ b/API/.env
@@ -5,3 +5,10 @@ BD_HOST = localhost
 BD_PORT = 5432
 BD_NAME = bd_loja
 URL_DB = http://localhost:80/
+# PORT = 80
+# BD_USER = zzyxquad
+# BD_PASSWORD = rOW-KvissRoesWxBBv-ZQ7ZO3WQOnHY_
+# BD_HOST = kesavan.db.elephantsql.com
+# BD_PORT = 5432
+# BD_NAME = zzyxquad
+# URL_DB = http://localhost:80/
