--- a/API/package.json
+++ b/API/package.json
@@ -12,7 +12,8 @@
   "main": "server/index.js",
   "scripts": {
     "test": "jest --env node",
-    "start": "nodemon server/index.js"
+    "start:dev": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "author": "",
   "license": "ISC",
