--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,8 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "pg-promise": "^10.12.0"
+    "pg-promise": "^10.12.0",
+    "twilio": "^3.82.1"
   },
   "name": "code",
   "version": "1.0.0",
