--- a/API/.env
+++ b/API/.env
@@ -6,7 +6,7 @@ BD_PORT = 5432
 BD_NAME = bd_loja
 URL_DB = http://localhost:80/
 TWILIO_ACCOUNT_SID=AC00886911a28e151f39965ca76cae2327
-TWILIO_AUTH_TOKEN=4602d4f18c2edd48addbbbd13c1c37b3
+TWILIO_AUTH_TOKEN=??
 # PORT = 80
 # BD_USER = zzyxquad
 # BD_PASSWORD = rOW-KvissRoesWxBBv-ZQ7ZO3WQOnHY_
