--- a/API/.env
+++ b/API/.env
@@ -5,8 +5,16 @@ BD_HOST = localhost
 BD_PORT = 5432
 BD_NAME = bd_loja
 URL_DB = http://localhost:80/
+# Twilio
 TWILIO_ACCOUNT_SID=AC00886911a28e151f39965ca76cae2327
 TWILIO_AUTH_TOKEN=??
+# NodeMailer
+NODEMAILER_HOST=smtp.gmail.com
+NODEMAILER_PORT=587
+NODEMAILER_USER=??
+NODEMAILER_PASS=??
+
+
 # PORT = 80
 # BD_USER = zzyxquad
 # BD_PASSWORD = rOW-KvissRoesWxBBv-ZQ7ZO3WQOnHY_
