--- a/API/package.json
+++ b/API/package.json
@@ -5,6 +5,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "nodemailer": "^6.7.8",
     "pg-promise": "^10.12.0",
     "twilio": "^3.82.1"
   },
