teste email novamente

--- a/API/.env
+++ b/API/.env
@@ -9,8 +9,8 @@ URL_DB = http://localhost:80/
 TWILIO_ACCOUNT_SID=AC00886911a28e151f39965ca76cae2327
 TWILIO_AUTH_TOKEN=??
 # NodeMailer
-NODEMAILER_HOST=smtp.gmail.com
-NODEMAILER_PORT=587
+NODEMAILER_HOST=??
+NODEMAILER_PORT=??
 NODEMAILER_USER=??
 NODEMAILER_PASS=??
 
